--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 arrayvec = "0.7.6"
+debug_unwraps = "0.1.0"
 delegate = "0.13.4"
 derive_more = { version = "2.0.1", features = ["full"] }
 strum = { version = "0.27.2", features = ["derive"] }
