--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
         run: cargo clippy --all-targets --all-features -- -D warnings
 
       - name: Run tests
-        run: RUST_MIN_STACK=16777216 cargo test --all
+        run: RUST_MIN_STACK=16777216 cargo test --all --features tune
